unpackaged/main/default/objects/AuthenticationService__c/AuthenticationService__c.object-meta.xml
<CustomObject>
    <description>This object stores the authentication services that users can use to access the application.</description>
    <label>Authentication Service</label>
    <nameField>
        <displayFormat>AS-{000000000}</displayFormat>
        <label>Authentication Service Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authentication Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>