unpackaged/main/default/objects/AuthenticationService__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <description>Authentication Service Id of the user.</description>
    <inlineHelpText>Authentication Service Id of the user.</inlineHelpText>
    <label>Identifier</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>