unpackaged/main/default/objects/AuthenticationService__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>User related to the authentication service.</description>
    <inlineHelpText>User related to the authentication service.</inlineHelpText>
    <label>User</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Authentication Services</relationshipLabel>
    <relationshipName>AuthenticationServices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>